@@ -1,1 +1,2 @@
 name                : default
+error-name          : error-name
